fix bug #45907: undefined reference to PHP_SHA512Init